--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^7.20.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.0.1",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "git": "^0.1.5",
     "js-cookie": "^3.0.5",
