--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
+    "recharts": "^2.15.0",
     "stylis": "^4.3.4",
     "stylis-plugin-rtl": "^2.1.1",
     "sweetalert2": "^11.14.0",
