--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.7",
+    "@mui/styles": "^6.4.12",
     "@mui/x-date-pickers": "^7.20.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.0.1",
     "dayjs": "^1.11.13",
+    "docxtemplater": "^3.63.2",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "git": "^0.1.5",
     "js-cookie": "^3.0.5",
+    "pizzip": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
