--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.16.7",
     "@mui/styles": "^6.4.12",
     "@mui/x-date-pickers": "^7.20.0",
+    "@pspdfkit/nodejs": "^0.0.7",
     "axios": "^1.7.7",
     "bootstrap": "^5.0.1",
     "dayjs": "^1.11.13",
@@ -24,7 +25,11 @@
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "git": "^0.1.5",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.4",
+    "mammoth": "^1.11.0",
     "pizzip": "^3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
