--- a/package.json
+++ b/package.json
@@ -53,5 +53,11 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "vite": "^6.4.1"
+  },
+  "pnpm": {
+    "overrides": {
+      "esbuild@<=0.24.2": ">=0.25.0",
+      "mime@<1.4.1": ">=1.4.1"
+    }
   }
 }
